изменил название настройки на дополнительно, блок дополнительно включил в процедуру renderCategories

--- a/platforms/browser/www/css/my-app.css
+++ b/platforms/browser/www/css/my-app.css
@@ -247,4 +247,5 @@ body.with-panel-left-cover .panel, body.with-panel-right-cover .panel {
 
 .layout-dark .categories .content-block-title {
     color: #aaa;
+    font-weight: 600;
 }
